--- a/trunk/MarbleMadness/MarbleMadness.vcxproj
+++ b/trunk/MarbleMadness/MarbleMadness.vcxproj
@@ -77,11 +77,13 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EstadoVisual.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MarbleMadness.cpp" />
+    <ClCompile Include="EstadoVisual.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
