--- a/trunk/MarbleMadness/MarbleMadness.vcxproj.filters
+++ b/trunk/MarbleMadness/MarbleMadness.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EstadoVisual.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MarbleMadness.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EstadoVisual.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
