--- a/trunk/MarbleMadness/MarbleMadness.vcxproj.filters
+++ b/trunk/MarbleMadness/MarbleMadness.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="EstadoVisual.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Juego.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EstadoVisual.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Juego.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
